--- a/html/main-index.html
+++ b/html/main-index.html
@@ -7,6 +7,7 @@
     <link rel='stylesheet' type='text/css' href='../css/main-css/style.css'>
 </head>
 <body>
+    <div>Some content</div>
     
 </body>
 </html>
