--- a/html/main-index.html
+++ b/html/main-index.html
@@ -7,7 +7,43 @@
     <link rel='stylesheet' type='text/css' href='../css/main-css/style.css'>
 </head>
 <body>
-    <div>Some content</div>
+    <div id='top-row'>
+
+        <div class='cards' id='deck'>
+        </div>
+        <div class='cards' id='flipped-deck'>
+        </div>
+        <div class='cards' id='empty-space'>
+        </div>
+        <div class='cards ace-stack'>
+        </div>
+        <div class='cards ace-stack'>
+        </div>
+        <div class='cards ace-stack'>
+        </div>
+        <div class='cards ace-stack'>
+        </div>
+
+    </div>
+    <div id='bottom-row'>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+        <div class='cards'>
+        </div>
+    </div>
+    <div id='button-container'>
+        <button id="new-game">New Game</button>
+    </div>
     
 </body>
 </html>
