--- a/main-index.html
+++ b/main-index.html
@@ -7,9 +7,11 @@
     <link rel='stylesheet' type='text/css' href='css/main-css/style.css'>
 </head>
 <body>
+    <div id="holding-div"></div>
+    <div id="overlay"></div>
     <div id='top-row'>
 
-        <div class='full' id='deck'>
+        <div id='deck'>
             <div class='deck-unflipped' id='remaining-cards'>
             </div>
         </div>
@@ -28,29 +30,29 @@
 
     </div>
     <div id='bottom-row'>
-        <div class='cards' id="first-stack">
+        <div class='cards cards-bottom' id="first-stack">
         </div>
-        <div class='cards' id="second-stack">
+        <div class='cards cards-bottom' id="second-stack">
             <div class='unknown-cards' id='second-unknown'>
             </div>
         </div>
-        <div class='cards' id="third-stack">
+        <div class='cards cards-bottom' id="third-stack">
             <div class='unknown-cards' id='third-unknown'>
             </div>
         </div>
-        <div class='cards' id="fourth-stack">
+        <div class='cards cards-bottom' id="fourth-stack">
             <div class='unknown-cards' id='fourth-unknown'>
             </div>
         </div>
-        <div class='cards' id="fifth-stack">
+        <div class='cards cards-bottom' id="fifth-stack">
             <div class='unknown-cards' id='fifth-unknown'>
             </div>
         </div>
-        <div class='cards' id="sixth-stack">
+        <div class='cards cards-bottom' id="sixth-stack">
             <div class='unknown-cards' id='sixth-unknown'>
             </div>
         </div>
-        <div class='cards' id="seventh-stack">
+        <div class='cards cards-bottom' id="seventh-stack">
             <div class='unknown-cards' id='seventh-unknown'>
             </div>
         </div>
