--- a/main-index.html
+++ b/main-index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solitare</title>
+    <meta http-equiv='ScreenOrientation' content='autoRotate:disabled'>
+    <title>Solitaire</title>
     <link rel='stylesheet' type='text/css' href='css/main-css/style.css'>
 </head>
 <body>
@@ -62,5 +63,6 @@
     </div>
 
     <script src="js/main.js"></script>
+    <script src='js/DragDropTouch.js'></script>
 </body>
 </html>
